--- a/static/style.css
+++ b/static/style.css
@@ -329,4 +329,11 @@ button:disabled {
     font-size: 16px;
     font-weight: bold;
     color: #2c3e50;
+}
+
+.section-heading {
+    color: #2c3e50;
+    margin: 30px 0 20px;
+    text-align: center;
+    font-size: 1.5em;
 } 
