updating the plot at %50 instead of %10 and some changes to index.html about what to show on x-axis for various plots

--- a/templates/index.html
+++ b/templates/index.html
@@ -210,25 +210,25 @@
             // Training Loss Plot
             Plotly.newPlot('train-loss-plot', 
                 [{...commonTrace1}, {...commonTrace2}], 
-                {...commonLayout, title: 'Training Loss', xaxis: {title: 'Batch (x100)'}, yaxis: {title: 'Loss'}}
+                {...commonLayout, title: 'Training Loss', xaxis: {title: 'Batch (x50)'}, yaxis: {title: 'Loss'}}
             );
 
             // Training Accuracy Plot
             Plotly.newPlot('train-acc-plot', 
                 [{...commonTrace1}, {...commonTrace2}], 
-                {...commonLayout, title: 'Training Accuracy', xaxis: {title: 'Batch (x100)'}, yaxis: {title: 'Accuracy (%)'}}
+                {...commonLayout, title: 'Training Accuracy', xaxis: {title: 'Batch (x50)'}, yaxis: {title: 'Accuracy (%)'}}
             );
 
             // Validation Loss Plot
             Plotly.newPlot('val-loss-plot', 
                 [{...commonTrace1}, {...commonTrace2}], 
-                {...commonLayout, title: 'Validation Loss', xaxis: {title: 'Batch (x100)'}, yaxis: {title: 'Loss'}}
+                {...commonLayout, title: 'Validation Loss', xaxis: {title: 'Epochs'}, yaxis: {title: 'Loss'}}
             );
 
             // Validation Accuracy Plot
             Plotly.newPlot('val-acc-plot', 
                 [{...commonTrace1}, {...commonTrace2}], 
-                {...commonLayout, title: 'Validation Accuracy', xaxis: {title: 'Batch (x100)'}, yaxis: {title: 'Accuracy (%)'}}
+                {...commonLayout, title: 'Validation Accuracy', xaxis: {title: 'Epochs'}, yaxis: {title: 'Accuracy (%)'}}
             );
         }
 
